src/test/ui/issues/issue-14091.stderr
error[E0308]: mismatched types
  --> $DIR/issue-14091.rs:2:5
   |
LL |     assert!(1,1);
   |     ^^^^^^^^^^^^^ expected `bool`, found integer
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
